# monarch

./: CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  check  clippy.toml  index.html  pyproject.toml  setup.py  stress.sh
actor_extension/: Cargo.toml
controller/: Cargo.toml  build.rs
examples/: .torchxconfig  actor.py  checkpointing.py  ddp.py  grpo_actor.py  mast.py  run_monarch_worker.sh  service.py
examples/morpho/: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/morpho/morpho/: activation_checkpointing.py  checkpointer.py  cli.py  config.py  dataloader.py  droppable.py  grad_clipping.py  lr_schedules.py  optimizer.py  random_context.py  report.py  script.py  subprocess.py  titan.py  train.py  trainer.py
examples/morpho/morpho/debug/: inject.py  observer.py  sweep.py
examples/morpho/morpho/debug/data/: __init__.py
examples/morpho/tests/: test_cli.py  test_fpobserve.py  test_optim.py  test_subprocess.py  test_sweep.py  test_titan.py
hyper/: hyper.dotslash.py
hyperactor/: Cargo.toml
hyperactor_extension/: Cargo.toml
hyperactor_macros/: Cargo.toml  build.rs
hyperactor_mesh/: Cargo.toml
hyperactor_mesh_macros/: Cargo.toml
hyperactor_multiprocess/: Cargo.toml
hyperactor_telemetry/: Cargo.toml
monarch_extension/: Cargo.toml  build.rs
monarch_hyperactor/: Cargo.toml
monarch_messages/: Cargo.toml  test_utils.py
monarch_simulator/: Cargo.toml
monarch_tensor_worker/: Cargo.toml
monarch_types/: Cargo.toml
monarch_worker/: Cargo.toml  build.rs  test_utils.py  test_worker_main.py
nccl-sys/: build.rs
rdma/: Cargo.toml
(+794 files in other folders)
